# eddie_floodresilience

./: .env.template  .gitignore  .gitmodules  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  environment.yml  pyproject.toml  selected_polygon.geojson  sonar-project.properties
.github/workflows/: add-issue-to-project.yml  blocking-issues.yml  run-tests.yml
docker/: eddie.Dockerfile
eddie_floodresilience/flood_model/templates/: building_cat.json
paper/: paper.bib  paper.md
src/: backend_entrypoint.sh  celery_worker_entrypoint.sh  pywps.cfg
src/eddie_floodresilience/: __init__.py  app.py  blueprint.py  config.py  run_all.py  static_boundary_instructions.json  tables.py  tasks.py
src/eddie_floodresilience/dynamic_boundary_conditions/: __init__.py
src/eddie_floodresilience/flood_model/: __init__.py  bg_flood_model.py  flood_scenario_process_service.py  flooded_buildings.py  process_hydro_dem.py  serve_model.py
src/eddie_wflow/: .gitignore  Convert_nz_to_GLOBCOVER.py  Generate_terrain_attributes.py  Generate_terrain_data_for_wflow.py  Generate_wflow_files.py  Manipulate_terrain_data.py  Run_wflow.py  __init__.py  generate_terrain_attributes.py  generate_terrain_data_for_wflow.py  manipulate_terrain_data.py  wflow_environment.yml
src/static/geo/: dark_blue.sld  difference_r_b_0_2.sld  landcover.sld  light_blue.sld  plasma_0_3m.sld  points_of_interest.geojson
terriajs/: catalog.json
tests/test_dynamic_boundary_conditions/rainfall/: test_hyetograph.py  (+3 more)
tests/test_flood_model/: test_flooded_buildings.py
(+31 files in other folders)
